--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 <div class="apps">
    <a href="SIFEI/FACTURACIONTICKETS.html"> SIFEI POS </a>
   </div>
+  <div class="apps">
+   <a href="RECORTES.html"> RECORTES </a>
+  </div>
     Powered by <b>PROVSOFT</b>
   </footer>
 </body>
