--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
    <a href="SIFEI/FACTURACIONTICKETS.html"> SIFEI POS </a>
   </div>
   <div class="apps">
-   <a href="RECORTES.html"> RECORTES </a>
+   <a href="POSVTA4/RECORTES.html"> RECORTES </a>
   </div>
     Powered by <b>PROVSOFT</b>
   </footer>
