--- a/POSVTA4/RECORTES.html
+++ b/POSVTA4/RECORTES.html
@@ -138,6 +138,23 @@ await cargarRutas();
 
 fechaFiltro.addEventListener("change", listarCortes);
 rutaFiltro.addEventListener("change", listarCortes);
+// =============================================
+// 🧩 NORMALIZAR FECHA DE CORTE (OPCIÓN A)
+// =============================================
+function normalizarFechaCorte(fecha) {
+  if (!fecha) return "";
+
+  // Quitar coma y espacios
+  fecha = fecha.replace(",", "").trim();
+
+  // Convertir DD/MM/YYYY → YYYY-MM-DD
+  if (fecha.includes("/")) {
+    const [d, m, y] = fecha.split("/");
+    return `${y}-${m.padStart(2,"0")}-${d.padStart(2,"0")}`;
+  }
+
+  return fecha;
+}
 
 async function listarCortes() {
   tbody.innerHTML = "<tr><td colspan='4'>Buscando cortes...</td></tr>";
@@ -148,29 +165,42 @@ async function listarCortes() {
 const cortes = snap.docs
   .map(d => ({ id: d.id, ...d.data() }))
   .filter(c => {
-    const okRuta = !rutaFiltro.value || c.rutaId === rutaFiltro.value;
-    const okFecha = !fechaFiltro.value || c.fecha_corte === fechaFiltro.value;
+    const okRuta =
+      !rutaFiltro.value ||
+      (c.rutaId || "").trim() === rutaFiltro.value.trim();
+
+    const okFecha =
+      !fechaFiltro.value ||
+      normalizarFechaCorte(c.fecha_corte) === fechaFiltro.value;
+
     return okRuta && okFecha;
-  });
+  })
+  .sort((a, b) =>
+    normalizarFechaCorte(b.fecha_corte)
+      .localeCompare(normalizarFechaCorte(a.fecha_corte))
+  );
+if (rutaFiltro.value && !fechaFiltro.value && cortes.length) {
+  fechaFiltro.value = normalizarFechaCorte(cortes[0].fecha_corte);
+}
 
   if (!cortes.length) {
     tbody.innerHTML = "<tr><td colspan='4' style='text-align:center;'>Sin resultados</td></tr>";
     return;
   }
 
-  tbody.innerHTML = "";
-  cortes.forEach(c => {
-    const fila = document.createElement("tr");
-    const resumen = c.resumen || {};
-    fila.innerHTML = `
-      <td>${c.rutaId}</td>
-      <td>${resumen.usuario || c.realizado_por || "—"}</td>
-      <td>${c.fecha_corte}</td>
-      <td><button data-id="${c.id}">🧾 Reimprimir</button></td>`;
-    fila.querySelector("button").onclick = () => reimprimirCorte(c);
-    tbody.appendChild(fila);
-  });
-}
+tbody.innerHTML = "";
+cortes.forEach(c => {
+  const fila = document.createElement("tr");
+  fila.innerHTML = `
+    <td>${c.rutaId}</td>
+    <td>${c.usuario || c.realizado_por || "—"}</td>
+    <td>${normalizarFechaCorte(c.fecha_corte)}</td>
+    <td><button>🧾 Reimprimir</button></td>
+  `;
+  fila.querySelector("button").onclick = () => reimprimirCorte(c);
+  tbody.appendChild(fila);
+});
+
 
 // =============================================
 // 🧾 BLOQUE 3 — FUNCIÓN DE REIMPRESIÓN
