--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -588,6 +588,7 @@ if (catalogoSW && Array.isArray(catalogoSW) && catalogoSW.length > 0) {
     departamento_id: x.departamento_id || null,
     departamento: x.departamento || null, // 🔥 FIX
     costoUnit: Number(x.costoUnit || x.costoSinImpuesto || 0),
+    permite_descuento: x.permite_descuento !== false,
   }));
 
   // 🔁 RECONSTRUIR ÍNDICES
@@ -634,6 +635,7 @@ catalogo = snap.docs.map(doc => {
     departamento_id: x.departamento_id || null,
     departamento: x.departamento || null,   // 🔥 ESTE FALTABA
     costoUnit: Number(x.costoUnit || x.costoSinImpuesto || 0),
+    permite_descuento: x.permite_descuento !== false,
   };
 });
 
@@ -805,7 +807,8 @@ function addProduct(prod, cant = 1) {
       claveSat: prod.claveSat || null,
       unidadSat: prod.unidadMedidaSat || null,
       ivaTasa: prod.ivaTasa ?? 0,
-      iepsTasa: prod.iepsTasa ?? 0
+      iepsTasa: prod.iepsTasa ?? 0,
+      permite_descuento: prod.permite_descuento !== false,
     });
 
     renderDebounced();
@@ -834,7 +837,8 @@ function addProduct(prod, cant = 1) {
       claveSat: prod.claveSat || null,
       unidadSat: prod.unidadMedidaSat || null,
       ivaTasa: prod.ivaTasa ?? 0,
-      iepsTasa: prod.iepsTasa ?? 0
+      iepsTasa: prod.iepsTasa ?? 0,
+      permite_descuento: prod.permite_descuento !== false,
     });
   }
 
@@ -893,8 +897,8 @@ function calcularTotales(descPorc = 0) {
 carrito.forEach(it => {
   const imp = it.cantidad * it.precioUnit;
 
-const ivaT  = Number(it.ivaTasa || 0);   // ya viene 0.16
-const iepsT = Number(it.iepsTasa || 0);  // ya viene 0
+  const ivaT  = Number(it.ivaTasa || 0);
+  const iepsT = Number(it.iepsTasa || 0);
 
   let base = imp;
   if (iepsT > 0 && ivaT > 0) base = imp / (1 + iepsT + ivaT * (1 + iepsT));
@@ -904,13 +908,20 @@ const iepsT = Number(it.iepsTasa || 0);  // ya viene 0
   const ivaCalc  = +(base * ivaT).toFixed(2);
   const iepsCalc = +(base * iepsT).toFixed(2);
 
-  it.iva_calculado = ivaCalc;
+  it.iva_calculado  = ivaCalc;
   it.ieps_calculado = iepsCalc;
 
   subtotal += base;
   iva += ivaCalc;
   ieps += iepsCalc;
   total += imp;
+
+  // 🔥 AQUÍ SE DEFINE QUIÉN RECIBE DESCUENTO
+  if (it.permite_descuento) {
+    subtotalElegible += base;
+  } else {
+    subtotalNoElegible += base;
+  }
 });
 
   // 🧮 Cálculo seguro de descuentos (sin dividir por cero)
@@ -1427,6 +1438,9 @@ $("#btnSolicitarDescuento").addEventListener("click", async () => {
   cobroTotal.textContent = money(tot.total);
   descuentoResumen.textContent = money(tot.descuento);
   descuentoInfo.style.display = "block";
+// 🔥 PUNTO 4 — FORZAR ACTUALIZACIÓN DEL POS
+render(descuentoAutorizado);
+localStorage.setItem("desc_porcentaje", descuentoAutorizado);
 
 // 🔥 FIX: Recalcular cambio AUTOMÁTICAMENTE después del descuento
 const pagoActual = parseFloat(montoRecibido.value) || 0;
